<resources>
    <string name="app_name">Vacancies Checker</string>
    <string name="frag_update_update_button_name">Check for Updates</string>
    <string name="frag_update_view_results_button_name">View Results</string>
    <string name="stats_main_title">Statistics:</string>
    <string name="stats_new_emp_button_name">New employers:</string>
    <string name="stats_new_vac_button_name">New vacancies:</string>
    <string name="stats_updated_vac_button_name">Updated vacancies:</string>
    <string name="stats_accepted_vac_button_name">Accepted vacancies:</string>
    <string name="stats_rejected_vac_button_name">Rejected vacancies:</string>
    <string name="stats_total_vac_button_name">Total vacancies:</string>
    <string name="stats_junk_stat_text">%d%% of vacancies is junk (%d of %d)</string>
    <string name="stats_new_stat_text">%d%% of accepted is new (%d of %d)</string>
    <string name="vacancies_headline_new">New vacancies:</string>
    <string name="vacancies_headline_updated">Updated vacancies:</string>
    <string name="vacancies_headline_accepted">Accepted vacancies:</string>
    <string name="vacancies_headline_rejected">Rejected vacancies:</string>
    <string name="vacancies_headline_total">All vacancies:</string>
    <string name="vacancies_headline_by_employer">By Employer:</string>
    <string name="vacancies_updated_date_name_name">Updated:</string>
    <string name="vacancies_updates_count_name">Updates count:</string>
    <string name="vacdetails_headline">Vacancy Details:</string>
    <string name="vacdetails_addition_date_label">Added:</string>
    <string name="vacdetails_view_view_btn_label">View in WebView</string>
    <string name="vacdetails_view_browser_btn_label">View in Browser</string>
    <string name="navigation_drawer_open">Navigation drawer open</string>
    <string name="navigation_drawer_close">Navigation drawer close</string>
    <string name="drawer_menu_item_start">Start</string>
    <string name="drawer_menu_item_settings">Settings</string>
    <string name="drawer_menu_item_view_database">View Datase</string>
    <string name="drawer_menu_item_recent_vacs">Recent Vacancies</string>
    <string name="settings_headline">Settings:</string>
    <string name="settings_url_field_label">Edit URL</string>
    <string name="settings_test_in_browser">Test in Browser</string>
    <string name="settings_keyword_list_label">Edit keywords</string>
    <string name="settings_keyword_edit_hint">enter a new keyword here</string>
    <string name="settings_save_btn">Save Settings</string>
    <string name="settings_saved_toast">Settings saved</string>
    <string name="settings_menu_reset">Reset Settings</string>
    <string name="db_empl_headline">Employers in Database</string>
    <string name="db_empl_vac_label">Vacancies:</string>
    <string name="db_empl_upd_label">Updated:</string>
    <string name="db_empl_rank_label">Activity Rank:</string>
    <string name="db_empl_menu_sort_by_name">Sort by Name</string>
    <string name="db_empl_menu_sort_by_count">Sort by Vacancies Count</string>
    <string name="db_empl_menu_sort_by_rank">Sort by Activity Rank</string>
    <string name="recentvacs_headline">Recent Vacancies</string>
    <string name="recentvacs_menu_sort_by_date">Sort by Date</string>
    <string name="recentvacs_menu_sort_by_update_date">Sort by Update Date</string>
    <string name="recentvacs_menu_sort_by_update_count">Sort by Update Count</string>
    <string name="update_status_title">Current Status</string>
    <string name="update_status_empl_label">Employers</string>
    <string name="update_status_vac_label">Vacancies</string>
    <string name="update_status_date_label">Last Update</string>
    <string name="update_status_ok_label">Okay</string>
    <string name="welcome_headline">Welcome to Vacancies Checker</string>
    <string name="welcome_check_settings">Check Settings to ensure it suits your needs</string>
    <string name="welcome_or">-- OR --</string>
    <string name="welcome_press_check">Press [CHECK FOR UPDATES] to start</string>
</resources>
