<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_menu_item_new_empl"
            android:icon="@android:drawable/ic_input_add"
            android:title="@string/stats_new_emp_button_name">
        </item>
        <item
            android:id="@+id/drawer_menu_item_new_vacancies"
            android:icon="@android:drawable/ic_popup_reminder"
            android:title="@string/stats_new_vac_button_name">
        </item>
        <item
            android:id="@+id/drawer_menu_item_updated_vacancies"
            android:icon="@android:drawable/ic_dialog_alert"
            android:title="@string/stats_updated_vac_button_name">
        </item>
        <item
            android:id="@+id/drawer_menu_item_accepted_vacancies"
            android:icon="@android:drawable/ic_media_play"
            android:title="@string/stats_accepted_vac_button_name">
        </item>
        <item
            android:id="@+id/drawer_menu_item_rejected_vacancies"
            android:icon="@android:drawable/ic_delete"
            android:title="@string/stats_rejected_vac_button_name">
        </item>
        <item
            android:id="@+id/drawer_menu_item_total_vacancies"
            android:icon="@android:drawable/ic_menu_today"
            android:title="@string/vacancies_headline_total">
        </item>
        <item
            android:id="@+id/drawer_menu_item_statistics"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/stats_main_title">
        </item>
        <item
            android:id="@+id/drawer_menu_break"
            android:title="">
        </item>
        <item
            android:id="@+id/drawer_menu_item_start"
            android:icon="@android:drawable/ic_dialog_dialer"
            android:title="@string/drawer_menu_item_start">
        </item>
    </group>

</menu>