<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/stats_parent_constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/stats_main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:paddingLeft="20dp"
        android:paddingTop="20dp"
        android:text="@string/stats_main_title"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/stats_parent_constraint_layout"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>


    <Button
        android:id="@+id/stats_new_emp_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/stats_new_emp_button_name"
        android:textSize="14dp"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/stats_main_title">

    </Button>


    <TextView
        android:id="@+id/stats_new_emp_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="42dp"
        android:gravity="right"
        android:text="0"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/stats_new_emp_button">

    </TextView>


    <Button
        android:id="@+id/stats_new_vac_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/stats_new_vac_button_name"
        android:textSize="14dp"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stats_new_emp_button">

    </Button>


    <TextView
        android:id="@+id/stats_new_vac_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="42dp"
        android:text="0"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/stats_new_vac_button">

    </TextView>


    <Button
        android:id="@+id/stats_updated_vac_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/stats_updated_vac_button_name"
        android:textSize="14dp"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stats_new_vac_button">

    </Button>

    <TextView
        android:id="@+id/stats_updated_vac_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="42dp"
        android:text="0"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/stats_updated_vac_button">

    </TextView>


    <Button
        android:id="@+id/stats_accepted_vac_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/stats_accepted_vac_button_name"
        android:textSize="14dp"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stats_updated_vac_button">

    </Button>

    <TextView
        android:id="@+id/stats_accepted_vac_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="42dp"
        android:text="0"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/stats_accepted_vac_button">

    </TextView>


    <Button
        android:id="@+id/stats_rejected_vac_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/stats_rejected_vac_button_name"
        android:textSize="14dp"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stats_accepted_vac_button">

    </Button>

    <TextView
        android:id="@+id/stats_rejected_vac_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="42dp"
        android:text="0"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/stats_rejected_vac_button">

    </TextView>


    <Button
        android:id="@+id/stats_total_vac_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/stats_total_vac_button_name"
        android:textSize="14dp"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stats_rejected_vac_button">

    </Button>

    <TextView
        android:id="@+id/stats_total_vac_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="42dp"
        android:text="0"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/stats_total_vac_button">

    </TextView>



    <View
        android:id="@+id/stats_divider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stats_total_vac_button" />

    <TextView
        android:id="@+id/stats_junk_stat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/stats_junk_stat_text"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stats_divider" />

    <TextView
        android:id="@+id/stats_new_stat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/stats_new_stat_text"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stats_junk_stat" />

</android.support.constraint.ConstraintLayout>